force-app/main/default/objects/FB_Lead__c/FB_Lead__c.object-meta.xml
<CustomObject>
    <description>Object that stores fields about a Facebook lead, as captured directly from Facebook.</description>
    <label>Facebook Lead</label>
    <nameField>
        <displayFormat>FB-{0000000000}</displayFormat>
        <label>FB Lead Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Facebook Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>