force-app/main/default/objects/FB_Lead__c/fields/ArchieBot_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>ArchieBot_Total_Score__c</fullName>
    <label>ArchieBot Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>