force-app/main/default/objects/FB_Lead__c/fields/Call_Campaign_Optin__c.field-meta.xml
<CustomField>
    <fullName>Call_Campaign_Optin__c</fullName>
    <formula>FB_Practice__r.FB_Call_Campaign_Opt_In__c</formula>
    <label>Call Campaign Optin</label>
    <type>Checkbox</type>
</CustomField>