force-app/main/default/objects/FB_Lead__c/fields/FB_1st_Contact_Time__c.field-meta.xml
<CustomField>
    <fullName>FB_1st_Contact_Time__c</fullName>
    <description>1st time the lead was contacted.</description>
    <label>FB 1st Contact Time</label>
    <type>Date</type>
</CustomField>