force-app/main/default/objects/FB_Lead__c/fields/FB_2nd_Contact_Time__c.field-meta.xml
<CustomField>
    <fullName>FB_2nd_Contact_Time__c</fullName>
    <description>2nd time the lead was contacted</description>
    <label>FB 2nd Contact Time</label>
    <type>Date</type>
</CustomField>