force-app/main/default/objects/FB_Lead__c/fields/FB_3rd_Contact_Time__c.field-meta.xml
<CustomField>
    <fullName>FB_3rd_Contact_Time__c</fullName>
    <description>3rd time the lead was contacted.</description>
    <label>FB 3rd Contact Time</label>
    <type>Date</type>
</CustomField>