force-app/main/default/objects/FB_Lead__c/fields/FB_Ad_Name__c.field-meta.xml
<CustomField>
    <fullName>FB_Ad_Name__c</fullName>
    <defaultValue>&quot;Messenger&quot;</defaultValue>
    <label>FB Ad Name</label>
    <length>2500</length>
    <type>LongTextArea</type>
</CustomField>