force-app/main/default/objects/FB_Lead__c/fields/FB_Best_Time__c.field-meta.xml
<CustomField>
    <fullName>FB_Best_Time__c</fullName>
    <label>FB Best Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>