force-app/main/default/objects/FB_Lead__c/fields/FB_Campaign_ID__c.field-meta.xml
<CustomField>
    <fullName>FB_Campaign_ID__c</fullName>
    <label>FB Campaign ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>