force-app/main/default/objects/FB_Lead__c/fields/FB_Campaign_Name__c.field-meta.xml
<CustomField>
    <fullName>FB_Campaign_Name__c</fullName>
    <defaultValue>&quot;Messenger&quot;</defaultValue>
    <label>FB Campaign Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>