force-app/main/default/objects/FB_Lead__c/fields/FB_Comments__c.field-meta.xml
<CustomField>
    <fullName>FB_Comments__c</fullName>
    <label>FB Comments</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>