force-app/main/default/objects/FB_Lead__c/fields/FB_Contact__c.field-meta.xml
<CustomField>
    <fullName>FB_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FB Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>FB_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>