force-app/main/default/objects/FB_Lead__c/fields/FB_Contact_Pref__c.field-meta.xml
<CustomField>
    <fullName>FB_Contact_Pref__c</fullName>
    <label>FB Contact Pref</label>
    <length>255</length>
    <type>Text</type>
</CustomField>