force-app/main/default/objects/FB_Lead__c/fields/FB_CreatedTime__c.field-meta.xml
<CustomField>
    <fullName>FB_CreatedTime__c</fullName>
    <label>FB_CreatedTime</label>
    <type>DateTime</type>
</CustomField>