force-app/main/default/objects/FB_Lead__c/fields/FB_Current_Treatments__c.field-meta.xml
<CustomField>
    <fullName>FB_Current_Treatments__c</fullName>
    <inlineHelpText>Do you currently use any of the following treatments?</inlineHelpText>
    <label>FB Current Treatments</label>
    <length>50</length>
    <type>Text</type>
</CustomField>