force-app/main/default/objects/FB_Lead__c/fields/FB_Date_Created__c.field-meta.xml
<CustomField>
    <fullName>FB_Date_Created__c</fullName>
    <label>FB Date Created</label>
    <length>50</length>
    <type>Text</type>
</CustomField>