force-app/main/default/objects/FB_Lead__c/fields/FB_Dental_Condition__c.field-meta.xml
<CustomField>
    <fullName>FB_Dental_Condition__c</fullName>
    <label>FB Dental Condition</label>
    <length>50</length>
    <type>Text</type>
</CustomField>