force-app/main/default/objects/FB_Lead__c/fields/FB_Email__c.field-meta.xml
<CustomField>
    <fullName>FB_Email__c</fullName>
    <label>FB Email</label>
    <type>Email</type>
</CustomField>