force-app/main/default/objects/FB_Lead__c/fields/FB_First_Name__c.field-meta.xml
<CustomField>
    <fullName>FB_First_Name__c</fullName>
    <label>FB First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>