force-app/main/default/objects/FB_Lead__c/fields/FB_Form__c.field-meta.xml
<CustomField>
    <fullName>FB_Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Facebook Form</label>
    <referenceTo>Facebook_Form__c</referenceTo>
    <relationshipName>FB_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>