force-app/main/default/objects/FB_Lead__c/fields/FB_Form_Id__c.field-meta.xml
<CustomField>
    <fullName>FB_Form_Id__c</fullName>
    <label>FB Form Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>