force-app/main/default/objects/FB_Lead__c/fields/FB_How_Quickly__c.field-meta.xml
<CustomField>
    <fullName>FB_How_Quickly__c</fullName>
    <inlineHelpText>What timeframe are you seeking to receive treatment from any dental discomfort?</inlineHelpText>
    <label>FB How Quickly</label>
    <length>50</length>
    <type>Text</type>
</CustomField>