force-app/main/default/objects/FB_Lead__c/fields/FB_InboxURL__c.field-meta.xml
<CustomField>
    <fullName>FB_InboxURL__c</fullName>
    <label>FB_InboxURL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>