force-app/main/default/objects/FB_Lead__c/fields/FB_Insurance_Provider__c.field-meta.xml
<CustomField>
    <fullName>FB_Insurance_Provider__c</fullName>
    <label>FB Insurance Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>