force-app/main/default/objects/FB_Lead__c/fields/FB_Interested_In_Financing__c.field-meta.xml
<CustomField>
    <fullName>FB_Interested_In_Financing__c</fullName>
    <label>FB_Interested In Financing</label>
    <length>50</length>
    <type>Text</type>
</CustomField>