force-app/main/default/objects/FB_Lead__c/fields/FB_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>FB_Last_Name__c</fullName>
    <label>FB Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>