force-app/main/default/objects/FB_Lead__c/fields/FB_Lead_Id__c.field-meta.xml
<CustomField>
    <fullName>FB_Lead_Id__c</fullName>
    <externalId>true</externalId>
    <label>FB Lead Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>