force-app/main/default/objects/FB_Lead__c/fields/FB_Message_Id__c.field-meta.xml
<CustomField>
    <fullName>FB_Message_Id__c</fullName>
    <description>Id of the message to be sent, based on scheduled contact 1,2,or 3</description>
    <formula>IF(  FB_Scheduled_1__c   == TODAY() , 1,
IF(  FB_Scheduled_2__c  == TODAY(), 2,
IF(  FB_Scheduled_3__c  == TODAY(), 3,
0)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FB Message Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>