force-app/main/default/objects/FB_Lead__c/fields/FB_Missing_Teeth__c.field-meta.xml
<CustomField>
    <fullName>FB_Missing_Teeth__c</fullName>
    <label>FB Missing Teeth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>