force-app/main/default/objects/FB_Lead__c/fields/FB_Most_Important_Factor__c.field-meta.xml
<CustomField>
    <fullName>FB_Most_Important_Factor__c</fullName>
    <inlineHelpText>What has been holding you back from receiving treatment?</inlineHelpText>
    <label>FB Most Important Factor</label>
    <length>50</length>
    <type>Text</type>
</CustomField>