force-app/main/default/objects/FB_Lead__c/fields/FB_Notification_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>FB_Notification_Sent_Date__c</fullName>
    <description>The date a notification was sent to the practice about this lead.</description>
    <inlineHelpText>The date a notification was sent to the practice about this lead.</inlineHelpText>
    <label>FB Notification Sent Date</label>
    <type>DateTime</type>
</CustomField>