force-app/main/default/objects/FB_Lead__c/fields/FB_Other_Dentists__c.field-meta.xml
<CustomField>
    <fullName>FB_Other_Dentists__c</fullName>
    <inlineHelpText>Have you received a treatment plan from another dentist recently?</inlineHelpText>
    <label>FB Other Dentists</label>
    <length>50</length>
    <type>Text</type>
</CustomField>