force-app/main/default/objects/FB_Lead__c/fields/FB_Page__c.field-meta.xml
<CustomField>
    <fullName>FB_Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FB Page</label>
    <referenceTo>FB_Page__c</referenceTo>
    <relationshipName>FB_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>