force-app/main/default/objects/FB_Lead__c/fields/FB_Phone_10__c.field-meta.xml
<CustomField>
    <fullName>FB_Phone_10__c</fullName>
    <formula>RIGHT(SUBSTITUTE(
    SUBSTITUTE(
        SUBSTITUTE(
            SUBSTITUTE(
                 FB_Phone__c ,
                &quot; &quot;,
                &quot;&quot;
            ),
            &quot;-&quot;,
            &quot;&quot;
        ),
        &quot;(&quot;,
        &quot;&quot;
    ),
    &quot;)&quot;,
    &quot;&quot;
), 10)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FB Phone 10</label>
    <type>Text</type>
</CustomField>