force-app/main/default/objects/FB_Lead__c/fields/FB_Phone__c.field-meta.xml
<CustomField>
    <fullName>FB_Phone__c</fullName>
    <label>FB Phone</label>
    <type>Phone</type>
</CustomField>