force-app/main/default/objects/FB_Lead__c/fields/FB_Platform__c.field-meta.xml
<CustomField>
    <fullName>FB_Platform__c</fullName>
    <label>FB Platform</label>
    <length>10</length>
    <type>Text</type>
</CustomField>