force-app/main/default/objects/FB_Lead__c/fields/FB_Practice__c.field-meta.xml
<CustomField>
    <fullName>FB_Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FB Practice</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>FB_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>