force-app/main/default/objects/FB_Lead__c/fields/FB_Practice_Billing_City__c.field-meta.xml
<CustomField>
    <fullName>FB_Practice_Billing_City__c</fullName>
    <formula>FB_Practice__r.BillingCity</formula>
    <label>FB Practice Billing City</label>
    <type>Text</type>
</CustomField>