force-app/main/default/objects/FB_Lead__c/fields/FB_Practice_Billing_State__c.field-meta.xml
<CustomField>
    <fullName>FB_Practice_Billing_State__c</fullName>
    <formula>FB_Practice__r.BillingState</formula>
    <label>FB Practice Billing State</label>
    <type>Text</type>
</CustomField>