force-app/main/default/objects/FB_Lead__c/fields/FB_Practice_Brand__c.field-meta.xml
<CustomField>
    <fullName>FB_Practice_Brand__c</fullName>
    <description>&apos;AD&apos; or &apos;ADI&apos; brand, based on the pr</description>
    <formula>TEXT(FB_Practice__r.Brand__c)</formula>
    <label>FB Practice Brand</label>
    <type>Text</type>
</CustomField>