force-app/main/default/objects/FB_Lead__c/fields/FB_Practice_LocalMed__c.field-meta.xml
<CustomField>
    <fullName>FB_Practice_LocalMed__c</fullName>
    <formula>FB_Practice__r.FB_LocalMed__c</formula>
    <label>FB Practice LocalMed</label>
    <type>Text</type>
</CustomField>