force-app/main/default/objects/FB_Lead__c/fields/FB_Practice_Name__c.field-meta.xml
<CustomField>
    <fullName>FB_Practice_Name__c</fullName>
    <formula>&apos;Affordable Dentures &amp; Implants - &apos; +  FB_Practice__r.BillingCity + &apos;, &apos; + text(FB_Practice__r.BillingStateCode)</formula>
    <label>FB Practice Name</label>
    <type>Text</type>
</CustomField>