force-app/main/default/objects/FB_Lead__c/fields/FB_Practice_Optin__c.field-meta.xml
<CustomField>
    <fullName>FB_Practice_Optin__c</fullName>
    <description>Practice has opted into Facebook Lead Gen emails</description>
    <formula>FB_Practice__r.FB_Lead_Optin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FB Practice Optin</label>
    <type>Checkbox</type>
</CustomField>