force-app/main/default/objects/FB_Lead__c/fields/FB_Practice_Owners__c.field-meta.xml
<CustomField>
    <fullName>FB_Practice_Owners__c</fullName>
    <formula>FB_Practice__r.Practice_Owner__c</formula>
    <label>FB Practice Owners</label>
    <type>Text</type>
</CustomField>