force-app/main/default/objects/FB_Lead__c/fields/FB_Practice_Social_Select__c.field-meta.xml
<CustomField>
    <fullName>FB_Practice_Social_Select__c</fullName>
    <formula>FB_Practice__r.Social_Select__c</formula>
    <label>FB Practice Social Select</label>
    <type>Checkbox</type>
</CustomField>