force-app/main/default/objects/FB_Lead__c/fields/FB_Practice_Tracking_Line__c.field-meta.xml
<CustomField>
    <fullName>FB_Practice_Tracking_Line__c</fullName>
    <formula>If(FB_Practice__r.Facebook_Tracking_Line__c != null, FB_Practice__r.Facebook_Tracking_Line__c, &quot;(800) 806-5962&quot;)</formula>
    <label>FB Practice Tracking Line</label>
    <type>Text</type>
</CustomField>