force-app/main/default/objects/FB_Lead__c/fields/FB_Practice_Website__c.field-meta.xml
<CustomField>
    <fullName>FB_Practice_Website__c</fullName>
    <formula>FB_Practice__r.Website</formula>
    <label>FB Practice Website</label>
    <type>Text</type>
</CustomField>