force-app/main/default/objects/FB_Lead__c/fields/FB_Preferred_Practice__c.field-meta.xml
<CustomField>
    <fullName>FB_Preferred_Practice__c</fullName>
    <label>FB Preferred Practice</label>
    <length>255</length>
    <type>Text</type>
</CustomField>