force-app/main/default/objects/FB_Lead__c/fields/FB_Routing__c.field-meta.xml
<CustomField>
    <fullName>FB_Routing__c</fullName>
    <label>FB Routing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Call Center</fullName>
            </value>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>Practice</fullName>
            </value>
            <value>
                <fullName>Practice + Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>