force-app/main/default/objects/FB_Lead__c/fields/FB_Scheduled_1__c.field-meta.xml
<CustomField>
    <fullName>FB_Scheduled_1__c</fullName>
    <description>1st date lead is scheduled to be contacted</description>
    <label>FB Scheduled 1</label>
    <type>Date</type>
</CustomField>