force-app/main/default/objects/FB_Lead__c/fields/FB_Scheduled_3__c.field-meta.xml
<CustomField>
    <fullName>FB_Scheduled_3__c</fullName>
    <description>3rd date lead is scheduled for contact</description>
    <label>FB Scheduled 3</label>
    <type>Date</type>
</CustomField>