force-app/main/default/objects/FB_Lead__c/fields/FB_Status__c.field-meta.xml
<CustomField>
    <fullName>FB_Status__c</fullName>
    <description>Status of the lead: &apos;Email&apos; (queued for email campaign) &apos;Call Center&apos; (queued for call campaign) or &apos;Scheduled&apos;</description>
    <label>FB Status</label>
    <length>11</length>
    <type>Text</type>
</CustomField>