force-app/main/default/objects/FB_Lead__c/fields/FB_Using_Insurance__c.field-meta.xml
<CustomField>
    <fullName>FB_Using_Insurance__c</fullName>
    <label>FB Using Insurance</label>
    <length>5</length>
    <type>Text</type>
</CustomField>