force-app/main/default/objects/FB_Lead__c/fields/FB_What_Service__c.field-meta.xml
<CustomField>
    <fullName>FB_What_Service__c</fullName>
    <label>FB What Service</label>
    <length>50</length>
    <type>Text</type>
</CustomField>