force-app/main/default/objects/FB_Lead__c/fields/FB_Which_Location_Do_You_Prefer__c.field-meta.xml
<CustomField>
    <fullName>FB_Which_Location_Do_You_Prefer__c</fullName>
    <label>FB_Which Location Do You Prefer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>