force-app/main/default/objects/FB_Lead__c/fields/FB_Zip__c.field-meta.xml
<CustomField>
    <fullName>FB_Zip__c</fullName>
    <label>FB Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>