force-app/main/default/objects/FB_Lead__c/fields/First_Appointment_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Appointment_Date__c</fullName>
    <description>First appointment date detected, by new_appt event. Will be erased if a cancelled_appt or deleted_appt event follows. Will be updated if a rescheduled event follows with the same id in First Appt Id</description>
    <label>First Appointment Date</label>
    <type>Date</type>
</CustomField>