force-app/main/default/objects/FB_Lead__c/fields/First_Appointment_Id__c.field-meta.xml
<CustomField>
    <fullName>First_Appointment_Id__c</fullName>
    <description>First appointment id detected for the lead</description>
    <label>First Appointment Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>