force-app/main/default/objects/FB_Lead__c/fields/First_Appointment_Trx__c.field-meta.xml
<CustomField>
    <fullName>First_Appointment_Trx__c</fullName>
    <description>The date time the appointment was recorded (approximately when it was entered into Dentrix)</description>
    <label>First Appointment Trx</label>
    <type>Date</type>
</CustomField>