force-app/main/default/objects/FB_Lead__c/fields/HasOptedOut__c.field-meta.xml
<CustomField>
    <fullName>HasOptedOut__c</fullName>
    <formula>FB_Contact__r.HasOptedOutOfEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>HasOptedOut</label>
    <type>Checkbox</type>
</CustomField>