force-app/main/default/objects/FB_Lead__c/fields/Hustler__c.field-meta.xml
<CustomField>
    <fullName>Hustler__c</fullName>
    <formula>IF(CONTAINS( FB_Campaign_Name__c , &apos;_HUS&apos;),1,0)</formula>
    <label>Hustler</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>