force-app/main/default/objects/FB_Lead__c/fields/Implant_Eagle__c.field-meta.xml
<CustomField>
    <fullName>Implant_Eagle__c</fullName>
    <formula>IF(CONTAINS( FB_Campaign_Name__c , &apos;_IE&apos;),1,0)</formula>
    <label>Implant Eagle</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>