force-app/main/default/objects/FB_Lead__c/fields/Last_Contact_Time__c.field-meta.xml
<CustomField>
    <fullName>Last_Contact_Time__c</fullName>
    <label>Last Contact Time</label>
    <type>DateTime</type>
</CustomField>