force-app/main/default/objects/FB_Lead__c/fields/Lead__c.field-meta.xml
<CustomField>
    <fullName>Lead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>Facebook Leads</relationshipLabel>
    <relationshipName>Facebook_Leads</relationshipName>
    <type>Lookup</type>
</CustomField>