force-app/main/default/objects/FB_Lead__c/fields/Master_Patient_Id__c.field-meta.xml
<CustomField>
    <fullName>Master_Patient_Id__c</fullName>
    <description>Master patient id from EDW / Dentrix</description>
    <label>Master Patient Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>