force-app/main/default/objects/FB_Lead__c/fields/NCO__c.field-meta.xml
<CustomField>
    <fullName>NCO__c</fullName>
    <formula>IF(CONTAINS( FB_Campaign_Name__c , &apos;_NCO&apos;),1,0)</formula>
    <label>NCO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>