force-app/main/default/objects/FB_Lead__c/fields/New_Patient__c.field-meta.xml
<CustomField>
    <fullName>New_Patient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Patient</label>
    <type>Checkbox</type>
</CustomField>