force-app/main/default/objects/FB_Lead__c/fields/Notify_Practice__c.field-meta.xml
<CustomField>
    <fullName>Notify_Practice__c</fullName>
    <formula>FB_Practice__r.FB_Notify_Practice__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Notify Practice</label>
    <type>Checkbox</type>
</CustomField>