force-app/main/default/objects/FB_Lead__c/fields/One_Time_Campaign__c.field-meta.xml
<CustomField>
    <fullName>One_Time_Campaign__c</fullName>
    <defaultValue>false</defaultValue>
    <label>One Time Campaign</label>
    <type>Checkbox</type>
</CustomField>