force-app/main/default/objects/FB_Lead__c/fields/Practice__c.field-meta.xml
<CustomField>
    <fullName>Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>FB_Leads1</relationshipName>
    <type>Lookup</type>
</CustomField>