force-app/main/default/objects/FB_Lead__c/fields/Practice_Email__c.field-meta.xml
<CustomField>
    <fullName>Practice_Email__c</fullName>
    <formula>If( FB_Practice__r.FB_Practice_Email__c  != &apos;&apos;,
FB_Practice__r.FB_Practice_Email__c,
 FB_Practice__r.FDA_Email__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practice Email</label>
    <type>Text</type>
</CustomField>