force-app/main/default/objects/FB_Lead__c/fields/Practice_Id__c.field-meta.xml
<CustomField>
    <fullName>Practice_Id__c</fullName>
    <formula>FB_Practice__r.Location_ID_5_digit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Practice Id</label>
    <type>Text</type>
</CustomField>