force-app/main/default/objects/FB_Lead__c/fields/Px_Email_Campaign_Optin__c.field-meta.xml
<CustomField>
    <fullName>Px_Email_Campaign_Optin__c</fullName>
    <formula>FB_Practice__r.FB_Email_Campaign_Opt_In__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Px Email Campaign Optin</label>
    <type>Checkbox</type>
</CustomField>