force-app/main/default/objects/FB_Lead__c/fields/Ready_to_schedule_an_appointment__c.field-meta.xml
<CustomField>
    <fullName>Ready_to_schedule_an_appointment__c</fullName>
    <label>Ready to schedule an appointment?</label>
    <length>50</length>
    <type>Text</type>
</CustomField>