force-app/main/default/objects/FB_Lead__c/fields/SMS1_Notification_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>SMS1_Notification_Sent_Date__c</fullName>
    <label>SMS1 Notification Sent Date</label>
    <type>DateTime</type>
</CustomField>