force-app/main/default/objects/FB_Lead__c/fields/SMS2_Notification_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>SMS2_Notification_Sent_Date__c</fullName>
    <label>SMS2 Notification Sent Date</label>
    <type>DateTime</type>
</CustomField>