force-app/main/default/objects/FB_Lead__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>FB_Practice__c</columns>
    <columns>FB_Contact__c</columns>
    <columns>FB_First_Name__c</columns>
    <columns>FB_Last_Name__c</columns>
    <columns>FB_Email__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>FB_Campaign_Name__c</columns>
    <columns>FB_Ad_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>FB_Campaign_Name__c</field>
        <operation>notEqual</operation>
        <value>Messenger</value>
    </filters>
    <label>All Facebook Leads</label>
</ListView>