force-app/main/default/objects/FB_Lead__c/listViews/AllYesterday.listView-meta.xml
<ListView>
    <fullName>AllYesterday</fullName>
    <columns>NAME</columns>
    <columns>FB_Form__c</columns>
    <columns>FB_Campaign_Name__c</columns>
    <columns>FB_Practice_Id__c</columns>
    <columns>FB_Practice__c</columns>
    <columns>Notify_Practice__c</columns>
    <columns>Px_Email_Campaign_Optin__c</columns>
    <columns>Call_Campaign_Optin__c</columns>
    <columns>FB_Contact__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>FB_Date_Created__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Facebook Leads Today</label>
</ListView>