force-app/main/default/objects/FB_Lead__c/listViews/Facebook_Email_Scheduled.listView-meta.xml
<ListView>
    <fullName>Facebook_Email_Scheduled</fullName>
    <booleanFilter>4 AND (1 OR 2 OR 3)</booleanFilter>
    <columns>NAME</columns>
    <columns>FB_Form__c</columns>
    <columns>FB_Practice__c</columns>
    <columns>Notify_Practice__c</columns>
    <columns>Px_Email_Campaign_Optin__c</columns>
    <columns>FB_Contact__c</columns>
    <columns>FB_First_Name__c</columns>
    <columns>FB_Last_Name__c</columns>
    <columns>FB_Email__c</columns>
    <columns>FB_Scheduled_1__c</columns>
    <columns>FB_Scheduled_2__c</columns>
    <columns>FB_Scheduled_3__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>HasOptedOut__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>FB_Scheduled_1__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>FB_Scheduled_2__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>FB_Scheduled_3__c</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <filters>
        <field>CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>8/1/2022 12:00 AM</value>
    </filters>
    <label>Facebook Email Scheduled</label>
</ListView>